Implement configurable fallback model system
- Add fallback_model_profile field support to model profiles
- Implement cascading fallback chains (A → B → C → system default)
- Add cycle detection for fallback chains
- Add get_model_profile method to ConfigurationManager
- Enhance get_fallback_model to support configurable fallbacks
- Add comprehensive test coverage for all fallback scenarios
- Maintain backward compatibility with existing fallback system
- Refactor complex methods to reduce cyclomatic complexity
- Fix legacy fallback tests to match refactored implementation

Addresses Issue #56 - Enhance fallback model system: configurable
fallbacks and clear display

--- a/.llm-orc/config.yaml
+++ b/.llm-orc/config.yaml
@@ -9,6 +9,14 @@ performance:
   timeout_seconds: 120
 
 model_profiles:
+  # Test profile with non-existent model to test fallbacks
+  test-fallback:
+    model: nonexistent-model:999b
+    provider: ollama
+    cost_per_token: 0.0
+    system_prompt: This model doesn't exist - should fallback!
+    timeout_seconds: 30
+    
   # Ultra-fast micro model for fallback reliability
   micro-local:
     model: qwen3:0.6b
