Complete comprehensive fallback system testing and validation
✅ PHASE 4: Comprehensive Testing Complete
- Test OAuth failures across all output formats (JSON, text, Rich)
- Test cascading fallback chains (guaranteed-fail → local-llama)
- Test cycle detection in fallback configurations (A→B→C→A prevention)
- Created cascading-fallback-test.yaml ensemble for validation
- Updated cycle test profiles to use invalid models for reliable testing

🎉 USER EXPERIENCE ACHIEVEMENTS:
- Clear failure messages with model profile names and failure types
- Structured fallback events work across all output formats
- Cycle detection prevents infinite loops with clear diagnostics
- Cascading fallbacks work seamlessly with user feedback

📊 TESTING RESULTS:
✅ JSON: Structured events with detailed failure information
✅ Text: Plain formatted warnings and success messages
✅ Rich: Enhanced visual display with emojis and colors
✅ OAuth failures: Properly classified and handled
✅ API key failures: Clear error messages and fallbacks
✅ Cycle detection: Prevents infinite recursion safely
✅ Cascading chains: guaranteed-fail → local-llama works perfectly

All core fallback functionality now complete and thoroughly tested.
Ready for Phase 5: Event system unification.

--- a/.llm-orc/config.yaml
+++ b/.llm-orc/config.yaml
@@ -246,20 +246,20 @@ model_profiles:
   # Profile that demonstrates cycle detection (should be prevented)
   # Using real ollama models but with forced failures to test cycle detection
   cycle-test-a:
-    model: llama3:latest
-    provider: ollama
+    model: invalid-model-a-that-does-not-exist
+    provider: nonexistent-provider
     system_prompt: "This profile will be forced to fail to test cycle detection."
     fallback_model_profile: "cycle-test-b"
     
   cycle-test-b:
-    model: llama3:latest
-    provider: ollama
+    model: invalid-model-b-that-does-not-exist
+    provider: nonexistent-provider
     system_prompt: "This profile will be forced to fail to test cycle detection."
     fallback_model_profile: "cycle-test-c"
     
   cycle-test-c:
-    model: llama3:latest
-    provider: ollama
+    model: invalid-model-c-that-does-not-exist
+    provider: nonexistent-provider
     system_prompt: "This profile will be forced to fail to test cycle detection."
     fallback_model_profile: "cycle-test-a"  # Creates cycle: A → B → C → A
     
