feat: enhance adaptive resource monitoring with continuous metrics collection
- Add continuous monitoring for ALL executions to capture meaningful resource data
- Implement background monitoring loop with proper CPU/memory sampling during execution
- Fix monitoring to collect data even when adaptive limits aren't triggered (small ensembles)
- Add comprehensive fallback mechanisms ensuring metrics are always available
- Enhance visualization to display detailed execution metrics in both Rich and text formats
- Include raw sample data display for research analysis purposes
- Improve resource management type reporting (adaptive vs static)
- Add circuit breaker state tracking throughout execution lifecycle
- Configure adaptive concurrency limits and baseline monitoring
- Update integration tests to validate new metrics collection behavior

--- a/.llm-orc/config.yaml
+++ b/.llm-orc/config.yaml
@@ -4,9 +4,13 @@ project:
     test: micro-local    # Fallback model for reliability and testing
 
 performance:
-  max_concurrent: 5
   streaming_enabled: true
   timeout_seconds: 120
+  concurrency:
+    adaptive_enabled: true
+    base_limit: 1
+    min_limit: 1
+    max_limit: 3
 
 model_profiles:
   # Test profile with non-existent model to test fallbacks
