feat: implement adaptive resource management with JSON-first rendering architecture (#58)
* feat: implement adaptive resource management with circuit breaker

- Add ResourceMonitoringCircuitBreaker with failure threshold and timeout
- Add SystemResourceMonitor with psutil for low-overhead metrics
- Add AdaptiveResourceManager with dynamic limit calculation
- All tests passing with <0.1ms overhead requirement met
- 94% test coverage on new module
- Add types-psutil dependency for type safety

Addresses Issue #55

* feat: integrate adaptive resource management with AgentExecutor

- Enhance AgentExecutor with adaptive resource management support
- Add get_adaptive_concurrency_limit method for dynamic limits
- Add configuration-driven adaptive manager initialization
- Maintain backward compatibility with static limits
- All integration tests passing with proper fallback behavior
- Fix all mypy and ruff linting issues

Addresses Issue #55

* feat: enhance adaptive resource monitoring with continuous metrics collection

- Add continuous monitoring for ALL executions to capture meaningful resource data
- Implement background monitoring loop with proper CPU/memory sampling during execution
- Fix monitoring to collect data even when adaptive limits aren't triggered (small ensembles)
- Add comprehensive fallback mechanisms ensuring metrics are always available
- Enhance visualization to display detailed execution metrics in both Rich and text formats
- Include raw sample data display for research analysis purposes
- Improve resource management type reporting (adaptive vs static)
- Add circuit breaker state tracking throughout execution lifecycle
- Configure adaptive concurrency limits and baseline monitoring
- Update integration tests to validate new metrics collection behavior

* test: achieve 95% test coverage milestone with comprehensive module testing

- Add extensive authentication tests including OAuth error handling and token storage
- Enhance visualization module test

--- a/.llm-orc/config.yaml
+++ b/.llm-orc/config.yaml
@@ -4,9 +4,13 @@ project:
     test: micro-local    # Fallback model for reliability and testing
 
 performance:
-  max_concurrent: 5
   streaming_enabled: true
   timeout_seconds: 120
+  concurrency:
+    adaptive_enabled: true
+    base_limit: 1
+    min_limit: 1
+    max_limit: 3
 
 model_profiles:
   # Test profile with non-existent model to test fallbacks
@@ -207,6 +211,22 @@ model_profiles:
     provider: anthropic-claude-pro-max
     system_prompt: "You are a research synthesist who loves connecting dots across disciplines to reveal surprising insights about human nature and society."
     timeout_seconds: 60
+    
+  # Efficient profile for resource-conscious agents
+  efficient:
+    model: qwen3:0.6b
+    provider: ollama
+    cost_per_token: 0.0
+    system_prompt: "You are an efficient AI analyst providing focused, high-quality analysis with optimized resource usage."
+    timeout_seconds: 30
+    
+  # Fast local model for architecture work
+  fast-architect:
+    model: llama3:latest
+    provider: ollama
+    cost_per_token: 0.0
+    system_prompt: "You are a systems architect specializing in high-performance async Python systems and integration patterns."
+    timeout_seconds: 45
     
   # Cascading fallback demonstration profiles
   # These demonstrate the configurable fallback system with A → B → C → system default chains
