--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "llm-orchestra"
-version = "0.10.0"
+version = "0.10.1"
 description = "Multi-agent LLM communication system with ensemble orchestration"
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -35,6 +35,7 @@ dependencies = [
     "cryptography",
     "requests>=2.32.4",
     "rich>=13.0.0",
+    "psutil>=5.9.0",
 ]
 requires-python = ">=3.11"
 
