--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,8 +42,9 @@ requires-python = ">=3.11"
 [project.optional-dependencies]
 dev = [
     "pytest>=7.4.0",
-    "pytest-asyncio>=0.21.0", 
+    "pytest-asyncio>=0.21.0",
     "pytest-cov>=4.1.0",
+    "pytest-bdd>=7.0.0",
     "ruff>=0.0.287",
     "mypy>=1.5.0",
     "build",
@@ -103,5 +104,6 @@ dev = [
     "vulture>=2.14",
     "psutil>=6.1.0",
     "types-psutil>=7.0.0.20250601",
+    "pytest-bdd>=8.1.0",
 ]
 
