--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ dependencies = [
     "requests>=2.32.4",
     "rich>=13.0.0",
     "psutil>=5.9.0",
+    "python-dotenv>=1.1.1",
 ]
 requires-python = ">=3.11"
 
