fix: exclude llm-orchestra-library submodule from linting
- Add --exclude llm-orchestra-library to ruff commands in CI
- Prevents linting errors from separate repository affecting CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,8 +48,8 @@ jobs:
     
     - name: Run linting
       run: |
-        uv run ruff check .
-        uv run ruff format --check .
+        uv run ruff check . --exclude llm-orchestra-library
+        uv run ruff format --check . --exclude llm-orchestra-library
     
     - name: Run type checking
       run: |
