--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ dependencies = [
     "psutil>=5.9.0",
     "python-dotenv>=1.1.1",
     "mcp>=1.0.0",
+    "fastapi>=0.115.0",
+    "uvicorn>=0.32.0",
 ]
 requires-python = ">=3.11"
 
