--- a/src/llm_orc/web/frontend/package.json
+++ b/src/llm_orc/web/frontend/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "preact": "^10.19.0",
-    "@preact/signals": "^1.2.0"
+    "@preact/signals": "^1.2.0",
+    "preact": "^10.19.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.8.0",
+    "@tailwindcss/vite": "^4.1.17",
+    "autoprefixer": "^10.4.22",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.3.0",
     "vite": "^5.0.0"
   }
