docs: document temperature and max_tokens in profiles and ensembles
Update README, CHANGELOG, architecture docs, and config templates
to reflect the new generation parameters feature.

--- a/src/llm_orc/templates/ensembles/example-local-ensemble.yaml
+++ b/src/llm_orc/templates/ensembles/example-local-ensemble.yaml
@@ -7,6 +7,7 @@ agents:
   - name: reviewer
     model_profile: micro-local
     system_prompt: You are a code reviewer that provides detailed feedback and suggestions for improvement.
+    temperature: 0.2       # Override profile default for more deterministic reviews
   - name: synthesizer
     model_profile: default
     depends_on: [researcher, reviewer]
