--- a/src/llm_orc/templates/local-config.yaml
+++ b/src/llm_orc/templates/local-config.yaml
@@ -10,7 +10,8 @@ project:
     test: micro-local     # Fallback model for reliability and testing
 
 # Model profiles define complete agent configurations
-# Each profile includes: model, provider, system_prompt, timeout_seconds, and cost_per_token
+# Each profile includes: model, provider, system_prompt, timeout_seconds, cost_per_token,
+# and optional generation parameters (temperature, max_tokens)
 model_profiles:
   # Local development profile - free and fast
   micro-local:
