chore: gitignore complexipy_cache and update library submodule

--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,9 @@ coverage.xml
 # Type checking
 .mypy_cache/
 
+# Complexity analysis cache
+.complexipy_cache/
+
 # Virtual environments
 .env
 .venv/
