refactor: resolve 11 codebase audit findings (Wave 1)
Mechanical cleanup from 2026-02-22 codebase audit:
- E11: Remove broken validate-contracts-* Makefile targets
- E15: Remove dead dependencies (websockets, aiohttp)
- U6: Delete ghost directories (communication/, contracts/, testing/)
- E12: Update ADR-004 status to Superseded, delete orphaned .claude/ artifacts
- E13: Fix reversed library-based content principle in ADR README
- E14: Update ADR 011-014 to Implemented, add missing ADRs 008-010 to index
- E16: Fix README library default claim (local detection, not remote GitHub)
- U13: Remove stale pytest markers (ADR-003/005), add ADR 010-014
- U7: Remove dead SUPPORTS_CUSTOM_ROLE_PROMPT flag
- E5: Rename adaptive_resource_manager.py to system_resource_monitor.py
- E6: Remove redundant role injection from DependencyResolver

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,6 @@ classifiers = [
     "Programming Language :: Python :: 3.13",
 ]
 dependencies = [
-    "websockets",
-    "aiohttp>=3.13.3",
     "pydantic>=2.12",
     "anthropic",
     "google-genai",
@@ -94,11 +92,14 @@ markers = [
     "adr-001-compliance: Tests for ADR-001 compliance",
     "adr-002: ADR-002 Composable Primitive Agent System tests",
     "adr-002-compliance: Tests for ADR-002 compliance",
-    "adr-003: ADR-003 Testable Script Agent Contracts tests",
-    "adr-005: ADR-005 Multi-Turn Agent Conversations tests",
     "adr-006: ADR-006 Library-Based Primitives Architecture tests",
     "adr-007: ADR-007 Progressive Ensemble Validation Suite tests",
     "adr-009: ADR-009 MCP Server Architecture and Plexus Integration tests",
+    "adr-010: ADR-010 Local Web UI tests",
+    "adr-011: ADR-011 Remove Conversational Ensemble System tests",
+    "adr-012: ADR-012 Pydantic Agent Config Models tests",
+    "adr-013: ADR-013 Ensemble Agent Type tests",
+    "adr-014: ADR-014 Input Key Selective Upstream Consumption tests",
     "agent-request-processing: Tests for agent request processing",
     "architectural-compliance: Tests for architectural compliance",
     "artifact-management: Tests for artifact management",
